--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     ],
     "scripts": {
         "build": "rm -rf dist && tsc -p tsconfig.json"
+    },
+    "devDependencies": {
+        "prettier": "^2.7.1",
+        "typescript": "^4.7.4"
     }
 }
