--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "@ahas/decorate-if",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "description": "conditional decorator library",
-    "main": "dist/index.ts",
+    "main": "dist/index.js",
     "author": "ahas <dev@ahas.io>",
     "repository": {
         "type": "git",
